fix header alignment

--- a/public/global.css
+++ b/public/global.css
@@ -54,7 +54,7 @@ button {
   color: var(--button-text-color);
   font-size: 1rem;
   margin: 1rem 0;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 0;
   display: inline-flex;
   align-items: center;
   cursor: pointer;
@@ -96,11 +96,10 @@ button:disabled:hover .icon {
 
 header {
   display: grid;
-  grid-template-columns: auto minmax(auto, 60rem) auto;
+  grid-template-columns: 5.5rem minmax(auto, 60rem) 5.5rem;
   place-items: center;
   grid-gap: 1rem;
   padding: 0.5rem 1rem;
-  /* color: white; */
   background: white;
 }
 
